2016-10-25  Jakub Jelinek  <jakub@redhat.com>

	* parser.c (cp_parser_postfix_expression): Adding missing break;.

	* cp-tree.h (finish_builtin_launder): Declare.
	* parser.c (cp_parser_postfix_expression): Handle RID_BUILTIN_LAUNDER.
	* semantics.c (finish_builtin_launder): New function.
	* pt.c (tsubst_copy_and_build): Handle instantiation of IFN_LAUNDER.
	* constexpr.c (cxx_eval_internal_function): Handle IFN_LAUNDER.
	(potential_constant_expression_1): Likewise.

2016-10-24  Jakub Jelinek  <jakub@redhat.com>

	* cp-objcp-common.c (cp_decl_dwarf_attribute): Handle DW_AT_reference
	and DW_AT_rvalue_reference.

	* cxx-pretty-print.c (pp_cxx_check_constraint): Use VAR_P (x)
	instead of TREE_CODE (x) == VAR_DECL.
	* constraint.cc (get_concept_definition): Likewise.
	(finish_shorthand_constraint): Likewise.
	* init.c (warn_placement_new_too_small): Likewise.
	* cp-gimplify.c (cp_genericize_r): Likewise.

2016-10-21  Jason Merrill  <jason@redhat.com>

	PR c++/77656
	* pt.c (convert_template_argument): Call convert_nontype_argument
	on value-dependent but not type-dependent arguments.
	(convert_nontype_argument): Handle value-dependent arguments.
	(canonicalize_expr_argument): New.
	(deducible_expression, unify): Skip CONVERT_EXPR.
	* error.c (dump_template_argument): Likewise.
	* mangle.c (write_expression): Likewise.

	* ptree.c (cxx_print_xnode) [TEMPLATE_PARM_INDEX]: Dump the decl.

2016-10-21  Jakub Jelinek  <jakub@redhat.com>

	* cp-objcp-common.c (cp_decl_dwarf_attribute): Handle
	DW_AT_const_expr.

2016-10-17  Jakub Jelinek  <jakub@redhat.com>

	* cp-objcp-common.h (cp_function_decl_explicit_p,
	cp_function_decl_deleted_p, cp_function_decl_defaulted): Remove.
	(cp_decl_dwarf_attribute): Declare.
	(LANG_HOOKS_FUNCTION_DECL_EXPLICIT_P,
	LANG_HOOKS_FUNCTION_DECL_DELETED_P,
	LANG_HOOKS_FUNCTION_DECL_DEFAULTED): Remove.
	(LANG_HOOKS_DECL_DWARF_ATTRIBUTE): Redefine.
	* cp-objcp-common.c (cp_function_decl_explicit_p,